# mlops-pipeline

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  Dockerfile.serve  Dockerfile.train  Makefile  README.md  dvc.yaml  pyproject.toml
.github/workflows/: ci.yml
configs/: config.yaml
configs/data/: smard.yaml
configs/model/: baseline.yaml  mlp.yaml
configs/optim/: adamw.yaml
configs/trainer/: default.yaml
data/: README.md
docs/: decisions.md  model_card.md  retraining_policy.md
notebooks/: README.md
scripts/: prepare_data.py
src/energy_price_mlops/: __init__.py
src/energy_price_mlops/data/: __init__.py  features.py  smard.py
src/energy_price_mlops/eval/: metrics.py
src/energy_price_mlops/models/: baseline.py  mlp.py
src/energy_price_mlops/serving/: __init__.py  app.py
src/energy_price_mlops/training/: __init__.py  train.py
tests/: test_baseline.py  test_metrics.py  test_smard.py
